SQuirreL SQL Client Change Log
==============================

Not yet released, available in our GIT repository and in snapshots and future releases.
===============================================================================================

Enhancements:

Find Alias function now has two keyboard short cuts: ctrl alt shift G and the former ctrl alt shift F.
   This change was needed because on Windows 10 ctrl alt shift F is blocked by the OS, see
   https://answers.microsoft.com/en-us/windows/forum/all/ctrl-alt-shift-f-no-longer-works-windows-10-pro/b3f2b3f9-46c7-4ecf-8d7d-4be0bf08d78b

Merge request #61: Message panel: For some Look & Feels the background color was corrected.

Library cleanup reduced installer jar size by more than 10 MB.

Code Completion: Improved SQL-alias completion by retaining SQL-aliases of successful SQL-Parser runs.
  I.e. as long as the SQL-Parser finds SQL errors, SQL-aliases of former parser runs will be used for code completion.
  Note: In connection with this change JSQLParser (https://github.com/JSQLParser/JSqlParser) was upgraded to version 3.3.

Merge request #60: JGoodies Plastic: Fixed overlapping Graph tab label
  Thanks to Stanimir Stamenkov for the patch.

Merge request #59: Improved Object tree coloring
  Note: Coloring of Session tabs can be adjusted by right click on Alias --> Alias Properties --> tab Color
  Thanks to Stanimir Stamenkov for the patch.

Code completion Plugin: New options to choose if columns/tables and views/schemas/catalogs
  are to be completed uppercase or lowercase or unchanged.
  See menu File --> New Session Properties --> tab Code Completion --> bottom of panel.

New entry in file icon menu: Copy file name to clipboard.

Improved error message for meta data load timeouts.
 See menu File --> New Session Properties --> tab SQL --> section "Meta data loading".

Merge request #53: Improved Session coloring