@@ -5,7 +5,7 @@ FileManager.error.cannotwritefile=File {0} \ncannot be written to.
 FileManager.savedfile=Saved to {0}
 
 
-SQLPanelAPI.untitledLabel=Untitled
+SQLPanelAPI.untitledLabel=Unspecified
 SQLPanelAPI.unsavedchanges=There are unsaved changes in file:\n {0} \n Save them now?
 SQLPanelAPI.unsavedchangestitle=Unsaved Changes - {0}
 
@@ -19,3 +19,6 @@ FileManager.error.chosen.File.can.not.be.read=File {0} can not be read.
 FileManager.error.file.open.failed.title=File error
 
 FileManager.error.invalid.file.name=Invalid file name\n{0}\nError message:\n{1}
+
+SQLPanelAPI.switchBackOnHowTo.file=To switch back on go to menu File -> "Global Preference" -> section "General" -> "Warning for unsaved file edits"
+SQLPanelAPI.switchBackOnHowTo.buffer=To switch back on go to menu File -> "Global Preference" -> section "General" -> "Warning for unsaved buffer edits"
